--- a/djangoproject/gestion_stock/templates/colis.html
+++ b/djangoproject/gestion_stock/templates/colis.html
@@ -48,20 +48,20 @@
                     <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                         <thead>
                         <tr>
-                            <th scope="col" class="th-sm"><i class="fas fa-cog"></i></th>
-                            <th scope="col" class="th-sm"> identifiant </th>
-                            <th scope="col" class="th-sm"> désignation fournisseur </th>
-                            <th scope="col" class="th-sm"> code client </th>
-                            <th scope="col" class="th-sm"> n° lot </th>
-                            <th scope="col" class="th-sm"> date péremption</th>
-                            <th scope="col" class="th-sm"> qte produit </th>
-                            <th scope="col" class="th-sm"> zone UMe </th>
-                            <th scope="col" class="th-sm"> U.M. entrée </th>
-                            <th scope="col" class="th-sm"> U.M. sortie </th>
-                            <th scope="col" class="th-sm"> code UM </th>
-                            <th scope="col" class="th-sm"> date expédition </th>
-                            <th scope="col" class="th-sm"> confirmé </th>
-                            <th scope="col" class="th-sm"> <i class="fa fa-trash"></i> </th>
+                            <th class="th-sm"><i class="fas fa-cog"></i></th>
+                            <th class="th-sm"> identifiant </th>
+                            <th class="th-sm"> désignation fournisseur </th>
+                            <th class="th-sm"> code client </th>
+                            <th class="th-sm"> n° lot </th>
+                            <th class="th-sm"> date péremption</th>
+                            <th class="th-sm"> qte produit </th>
+                            <th class="th-sm"> zone UMe </th>
+                            <th class="th-sm"> U.M. entrée </th>
+                            <th class="th-sm"> U.M. sortie </th>
+                            <th class="th-sm"> code UM </th>
+                            <th class="th-sm"> date expédition </th>
+                            <th class="th-sm"> confirmé </th>
+                            <th class="th-sm"> <i class="fa fa-trash"></i> </th>
                         </tr>
                         </thead>
                         <tbody>
@@ -70,16 +70,14 @@
                             <td> <button id='{{ items.idColi }}' class="dyna"> -> </button></td>
                             <td> {{ items.idColis }} </td>
                             <td> {{ items.fk_Article.designationFournisseur|safe }} </td>
-                            <td> {{ items.fk_Article.codeclient }} </td>
-                            <td> {{ items.codeClient }} </td>
+                            <td> {{ items.fk_UniteManutentionEntree.fk_BonLivraisonEntree.fk_Client.nom }} </td>
                             <td> {{ items.numeroLot|safe }} </td>
                             <td> {{ items.datePeremption }} </td>
-                            <td> {{ items.quantititeProduit }} </td>
+                            <td> {{ items.quantiteProduit }} </td>
                             <td> {{ items.fk_ZoneDepot.nom|safe }} </td>
                             <td> {{ items.fk_UniteManutentionEntree.idUniteManutentionEntree }} </td>
-                            <td> {{ items.fk_UniteManutentionSortie.idUniteManutentionEntree }} </td>
+                            <td> {{ items.fk_UniteManutentionSortie.idUniteManutentionSortie }} </td>
                             <td> {{ items.fk_Destinataire.codeUM }} </td>
-                            <td> {{ items.dateExpedition }} </td>
                             <td> {{ items.fk_UniteManutentionSortie.dateExpedition }} </td>
                             <td> {{ items.emplacementConfirme }} </td>
                             <td> <button id='{{ items.idArticle }}' class="dynad"> X </button> </td>
