--- a/djangoproject/gestion_stock/templates/base_generic.html
+++ b/djangoproject/gestion_stock/templates/base_generic.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="csrf_token" content="{{ csrf_token }}">
+
+  {% load staticfiles %}
+  {% block style %}
+  <link rel="stylesheet" href="{% static "fontawesome/css/fontawesome-all.min.css" %}">
+  {% endblock %}
+
   {% load static %}
   <link rel="stylesheet" href="{{ STATIC_URL }} /static/css/style.css">
   <link href="{{ STATIC_URL }} /static/jquery-ui-1.12.1/jquery-ui.css" rel="stylesheet">
@@ -16,10 +22,10 @@
   <script type="text/javascript" src="{{ STATIC_URL }} /static/js/popper.min.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }} /static/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ STATIC_URL }} /static/css/mdb.min.css">
   <script type="text/javascript" src="{{ STATIC_URL }} /static/js/addons/datatables.min.js"></script>
   <!--
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="{{ STATIC_URL }} /static/js/jquery-ui.js"></script>
