passage en select simple
https://stackoverflow.com/questions/28441105/jquery-ui-selectmenu-not-working-in-dialog

--- a/djangoproject/gestion_stock/templates/article.html
+++ b/djangoproject/gestion_stock/templates/article.html
@@ -93,7 +93,7 @@
   $(document).ready(function () {
     $('#dtBasicExample').DataTable();
     $('.dataTables_length').addClass('bs-select');
-
+    $('#article').fadeTo("slow", 0.5);
   //<span class="sr-only">(current)</span>
   });
 
