--- a/djangoproject/gestion_stock/templates/bonCommandeEntree.html
+++ b/djangoproject/gestion_stock/templates/bonCommandeEntree.html
@@ -73,6 +73,7 @@
     $(document).ready(function () {
       $('#dtBasicExample').DataTable();
       $('.dataTables_length').addClass('bs-select');
+      $('#boncommandeentree').fadeTo("slow", 0.5);
     });
 
     $("#create-row").click(function() {
