--- a/djangoproject/gestion_stock/templates/bonCommandeSortie.html
+++ b/djangoproject/gestion_stock/templates/bonCommandeSortie.html
@@ -178,6 +178,7 @@
         oldname = name;
         i = 1;
         "{% endfor %}"
+        $('#boncommandesortie').fadeTo("slow", 0.5);
     });
 </script>
 
