--- a/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
@@ -83,6 +83,7 @@
     $(document).ready(function () {
         $('#dtBasicExample').DataTable();
         $('.dataTables_length').addClass('bs-select');
+        $('#bonlivraisonentree').fadeTo("slow", 0.5);
     });
 
     $("#create-row").click(function() {
