--- a/djangoproject/gestion_stock/templates/bonLivraisonSortie.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonSortie.html
@@ -119,6 +119,7 @@
 
 <script type="text/javascript">
     $(document).ready(function() {
+        $('#bonlivraisonsortie').fadeTo("slow", 0.5);
         var idx = 0;
         var idDestinataire = 0;
         var destinatairelist = [];
