--- a/djangoproject/gestion_stock/templates/destinataire.html
+++ b/djangoproject/gestion_stock/templates/destinataire.html
@@ -116,6 +116,7 @@
     $(document).ready(function () {
       $('#dtBasicExample').DataTable();
       $('.dataTables_length').addClass('bs-select');
+      $('#destinataires').fadeTo("slow", 0.5);
     });
 
     $("#create-row").click(function() {
