--- a/djangoproject/gestion_stock/templates/fournisseur.html
+++ b/djangoproject/gestion_stock/templates/fournisseur.html
@@ -79,6 +79,7 @@
     $(document).ready(function () {
       $('#dtBasicExample').DataTable();
       $('.dataTables_length').addClass('bs-select');
+      $('#fournisseurs').fadeTo("slow", 0.5);
     });
 
     $("#create-row").click(function() {
