--- a/djangoproject/gestion_stock/templates/transporteur.html
+++ b/djangoproject/gestion_stock/templates/transporteur.html
@@ -111,6 +111,7 @@
   $(document).ready(function () {
     $('#dtBasicExample').DataTable();
     $('.dataTables_length').addClass('bs-select');
+    $('#transporteurs').fadeTo("slow", 0.5);
   });
 
   $("#create-row").click(function() {
