--- a/djangoproject/gestion_stock/templates/unitemanutentionentree.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentree.html
@@ -78,6 +78,7 @@
     $(document).ready(function () {
         $('#dtBasicExample').DataTable();
         $('.dataTables_length').addClass('bs-select');
+        $('#umentree').fadeTo("slow", 0.5);
     });
 
     $("#create-row").click(function() {
